# odontoprev_desafio

./: .gitignore  README.md  odontoprev_guias_tratamentos_odontologicos.postman_collection.json  setup.cfg  setup.py  setup_hml.sh
src/guias_tratamentos_odontologicos/: app.py
src/guias_tratamentos_odontologicos/.chalice/: config.json
src/guias_tratamentos_odontologicos/chalicelib/cli/: setup_database.py
src/guias_tratamentos_odontologicos/chalicelib/helpers/: __init__.py
src/guias_tratamentos_odontologicos/chalicelib/interfaces/: db.py  motor_regras.py
src/guias_tratamentos_odontologicos/chalicelib/middlewares/: __init__.py
src/guias_tratamentos_odontologicos/chalicelib/schemas/: __init__.py  beneficiario.py  compartilhado.py  dentista.py
src/guias_tratamentos_odontologicos/chalicelib/views/: __init__.py  beneficiarios.py  dentistas.py  eventos.py  guias.py
src/guias_tratamentos_odontologicos/schemas/: compartilhado.py
tests/: __init__.py  conftest.py  test_endpoints.py  test_schema_cadastro_beneficiario.py  test_schema_cadastro_dentista.py  test_schema_requisitos_compartilhados.py
