[metadata]
name = guias_tratamentos_odontologicos
version = 0.1.0

[options]
include_package_data = True
package_dir=
    =src
packages=find:
python_requires = >=3.8
install_requires =
    chalice
    marshmallow
    mypy
    pytest
    requests
    types-requests
    types-python-dateutil

[options.package_data]
* = .chalice/*.json

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    setup_db = guias_tratamentos_odontologicos.chalicelib.cli.setup_database:main
